--- a/style0.css
+++ b/style0.css
@@ -1,6 +1,6 @@
 @import "https://fonts.googleapis.com/css2?family=Open+Sans&display=swap";
 body {
-    background-image: url('https://senres.sugepula.xyz/mieunica.png') !important;
+    background-image: url('https://senres.sugepula.xyz/bostanickamorptea.png') !important;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
